tickets spacing fix

--- a/public/stylesheets/compiled.css
+++ b/public/stylesheets/compiled.css
@@ -3495,6 +3495,7 @@ a.logo:hover {
   }
 }
 
+.tickets,
 .location {
   margin-bottom: 4em;
 }
