--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1034,6 +1034,7 @@ a.logo {
 	}
 }
 
+.tickets,
 .location {
 	margin-bottom: 4em;
 }
